--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "next": "15.0.0-canary.56",
-    "next-auth": "5.0.0-beta.19",
+    "next-auth": "5.0.0-beta.27",
     "postcss": "8.4.38",
+    "postgres": "^3.4.5",
     "react": "19.0.0-rc-f38c22b244-20240704",
     "react-dom": "19.0.0-rc-f38c22b244-20240704",
     "tailwindcss": "3.4.4",
